# lollypop

./: .gitignore  .gitlab-ci.yml  .gitmodules  PACKAGERS  README.md  lollypop.in  meson.build  meson_options.txt  org.gnome.Lollypop.json  pypi-dependencies.json  requirements.txt  run.sh
.gitlab/issue_templates/: Bug.md  Feature.md
data/: AboutDialog.ui.in  Appmenu.ui  ArtistBannerWidget.ui  ArtworkSearch.ui  DeviceWidget.ui  EqualizerWidget.ui  FullScreen.ui  InformationBannerWidget.ui  LovedWidget.ui  PlaylistBannerWidget.ui  PlaylistPopover.ui  RadioMenu.ui  RatingWidget.ui  SearchBannerWidget.ui  SettingsDialog.ui  Shortcuts.ui  SmartPlaylistView.ui  SmartPlaylistWidget.ui  ToolbarEnd.ui  TuneinPopover.ui  application.css  lollypop.gresource.xml  meson.build  org.gnome.Lollypop.appdata.xml.in  org.gnome.Lollypop.desktop.in  org.gnome.Lollypop.gschema.xml
debian/: changelog  control  copyright  gbp.conf  lollypop.1  lollypop.manpages  postinst  rules  watch
hooks/: pre-commit.archlinux  pre-commit.debian  pre-commit.fedora  pre-commit.ubuntu
lollypop/: app_notification.py  application.py  application_actions.py  application_cmdline.py  artwork.py  artwork_album.py  artwork_artist.py  artwork_downloader.py  artwork_downloader_album.py  artwork_downloader_artist.py  artwork_manager.py  assistant.py  assistant_flatpak.py  assistant_google.py  assistant_lastfm.py  assistant_musicbrainz.py  codecs.py  collection_item.py  collection_scanner.py  container.py  container_filter.py  container_history.py  container_lists.py  container_notification.py  container_playlists.py  container_scanner.py  container_stack.py  container_views.py  database.py  database_albums.py  database_artists.py  database_cache.py  database_genres.py  database_history.py  database_tracks.py  database_upgrade.py  define.py  dialog_apps.py  dialog_settings.py  fastscroll.py  (+177 more)
lollypop/locales/: zh_cn.py
save/: database_mpd.py  mpd.diff  mpd.py
search-provider/: lollypop-sp.in  meson.build  org.gnome.Lollypop.SearchProvider.ini  org.gnome.Lollypop.SearchProvider.service.in
subprojects/po/: .gitignore  LINGUAS  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  en_IE.po  eo.po  es.po  es_EC.po  fa.po  fi.po  fr.po  ga.po  he.po  hr.po  hu.po  id.po  ie.po  it.po  ja.po  ka.po  ko.po  lollypop.pot  lt.po  meson.build  nb_NO.po  nl.po  nl_BE.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  (+9 more)
